tests/fail-namespace4.mg
namespace sp { namespace a { } namespace a { } } // error: duplicate namespace

object main { }
